--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     height: 100%;
     width: 100%;
-    padding: 2em;
+    
 }
 .form-container{
     display: flex;
@@ -17,11 +17,15 @@
     border-radius: 20px;
     background-color: #f9f9ff;
     height: 100%;
-    width: 60%;
+    width: 40%;
     padding: 2em;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 20px;
 }
-
+img {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+}
 .title-page{
     color: #020299;
     font-size: 25px;
@@ -62,7 +66,7 @@
     color: #fff;
     font-size: 16px;
     font-weight: 550;
-    background-color: #0303ff;
+    background-color: #0202ad;
     padding: 1em;
     width: 50%;
     margin-top: 30px;
@@ -70,7 +74,7 @@
     box-shadow: rgba(0, 0, 0, 0.16) 0px 4px 10px;
 }
 .button-form:hover{
-    background-color: #020299;
+    background-color: #020276;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 6px 20px;
 }
 
@@ -84,3 +88,8 @@
     width: 50%;
 
 }
+
+.mySelect{
+    display: flex;
+    width: 50%;
+   }
