--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,4 +1,5 @@
 .container{
+    overflow: 'scroll';
     display: flex;
     justify-content: center;
     justify-items: center;
@@ -17,13 +18,14 @@
     border-radius: 20px;
     background-color: #f9f9ff;
     height: 100%;
-    width: 40%;
+    width: 50%;
     padding: 2em;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 20px;
+    overflow: 'scroll';
 }
 img {
   width: 100%;
-  max-width: 400px;
+  max-width: 300px;
   height: auto;
 }
 .title-page{
