--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,5 +1,4 @@
 .container{
-    overflow: 'scroll';
     display: flex;
     justify-content: center;
     justify-items: center;
@@ -7,6 +6,7 @@
     flex-direction: column;
     height: 100%;
     width: 100%;
+    padding: 2em;
     
 }
 .form-container{
@@ -21,12 +21,6 @@
     width: 50%;
     padding: 2em;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 20px;
-    overflow: 'scroll';
-}
-img {
-  width: 100%;
-  max-width: 300px;
-  height: auto;
 }
 .title-page{
     color: #020299;
@@ -97,3 +91,8 @@ img {
     display: flex;
     width: 50%;
    }
+
+.img-logo{
+    width: 150px;
+    height: 80px;
+}
